# Freelance-MCP-Server

./: .dockerignore  .env.example  .gitignore  ADVANCED_FEATURES.md  API_RESEARCH.md  CHANGELOG.md  DEBUGGING_REPORT.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MCP_GUIDE.md  MCP_TEST_RESULTS.md  PROJECT_SUMMARY.md  README.md  README_MCP.md  REAL_USER_TEST.md  SETUP_GUIDE.md  STRUCTURE.md  USAGE.md  ai_features.py  automation.py  demo_user_scenarios.py  docker-compose.yml  freelance_api_clients.py  freelance_client.py  freelance_server.py  install.sh  main.py  pyproject.toml  requirements.txt  simple_mcp_test.py  test_api_integration.py  test_mcp_coherence.py  user_experience_test.py
.github/workflows/: security.yml  test.yml
database/: __init__.py  db_manager.py  models.py
docs/: DEBUG_REPORT.md  FEATURES.md  FINAL_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  USER_READY_SUMMARY.md  VALIDATION_STATUS.md
examples/: README.md  custom_client.py  mcp_claude_integration.py
mcp_extensions/: __init__.py  capabilities.py  prompts.py  resource_templates.py
tests/: __init__.py  test_debug.py  test_server.py
tests/integration/: test_setup.py
utils/: __init__.py  config.py  logger.py  monitoring.py
